[BE] Refactor: Collectors.toList() -> toList() 변경